Bug 335900 - 'Form/Report Design' tab is not selected again when leaving Design mode and returning
Summary: 'Form/Report Design' tab is not selected again when leaving Design mode and r...
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.8.3
Platform: Mint (Ubuntu based) Linux
: NOR minor
Target Milestone: 2.9.4
Assignee: Roman Shtemberko
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2014-06-06 19:35 UTC by Ian Balchin
Modified: 2019-02-18 19:39 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.4
Sentry Crash Report:
staniek: Usability+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Balchin 2014-06-06 19:35:05 UTC
Leaving Report Design mode, either to the Report Data view, or to a different tab, and then returning finds the focus remaining on whatever tab it moved to when leaving the Report Design mode - by default the adjacent 'Tools' tab unless changed

Reproducible: Always

Steps to Reproduce:
1. Open any table in Data Mode
2. Open any report in Design Mode, note the 'Report Design' toolbar has focus
3. Click on table tab
4. Click on report tab, note that focus is now on the 'Tools' toolbar

OR

3. Leave report Design Mode for Data Mode
4. Leave report Data Mode for Design Mode, note that focus is now on the 'Tools' toolbar

Actual Results:  
We leave the report in Design Mode, with focus on 'Report Design' toolbar
We return to the report Design Mode to find focus now lost from the 'Report Design' toolbar

Expected Results:  
Since only the 'Report Design' toolbar is of any significance when designing a report, I would expect the focus to return to the 'Report Design' toolbar when returning to the report Design Mode.
Comment 1 Jarosław Staniek 2014-06-11 13:54:32 UTC
Strictly speaking: instead of focus better to use tab activation or tab selection term. It took me a while to understand that it's not about incorrectly focusing a widget :)

So changing the Summary to:
'Report Design' tab is not selected again when leaving Report Design mode and then returning
Comment 2 Jarosław Staniek 2014-06-11 13:57:28 UTC
Updated Summary again since the issue applies to forms too (in fact any designer that defines own Design toolbar).
Comment 3 Jarosław Staniek 2014-06-23 22:25:10 UTC
In progress...
Comment 4 Priyansh 2014-10-31 17:22:12 UTC
Hey guys can anyone help.They are talking about which Table.Where to find it.How to open it
Comment 5 Jarosław Staniek 2015-04-30 10:24:28 UTC
Git commit 020a0918b1f0dc2846ac8ffe26bc3975710e0cd9 by Jaroslaw Staniek, on behalf of Roman Shtemberko.
Committed on 30/04/2015 at 10:22.
Pushed by staniek into branch 'calligra/2.9'.

Activate Design tab on switching to design mode

(if no other tab was explicitly selected for this window & mode)

REVIEW:123536
FIXED-IN:2.9.4

M  +17   -12   kexi/main/KexiMainWindow.cpp
M  +3    -0    kexi/main/KexiMainWindow.h

http://commits.kde.org/calligra/020a0918b1f0dc2846ac8ffe26bc3975710e0cd9