Activate Design tab on switching to design mode

(if no other tab was explicitly selected for this window & mode)

REVIEW:123536
BUG:335900
FIXED-IN:2.9.4