kexi/main/KexiMainWindow.cpp
@@ -2634,9 +2634,9 @@ tristate KexiMainWindow::switchToViewMode(KexiWindow& window, Kexi::ViewMode vie
     restoreDesignTabIfNeeded(currentWindow()->partItem()->partClass(), viewMode,
                              currentWindow()->partItem()->identifier());
     if (viewMode == Kexi::DesignViewMode) {
+        activateDesignTab(currentWindow()->partItem()->partClass());
         // Restore the saved tab to the orig one. restoreDesignTabIfNeeded() saved tools tab probably.
         d->tabsToActivateOnShow.insert(currentWindow()->partItem()->identifier(), origTabToActivate);
-        d->tabbedToolBar->setCurrentTab(origTabToActivate);
     }
 
     return true;
@@ -4067,8 +4067,8 @@ void KexiMainWindow::setReasonableDialogSize(QDialog *dialog)
 void KexiMainWindow::restoreDesignTabAndActivateIfNeeded(const QString &tabName)
 {
     d->tabbedToolBar->showTab(tabName);
-    if (   currentWindow() && currentWindow()->partItem()
-        && currentWindow()->partItem()->identifier() > 0)
+    if (currentWindow() && currentWindow()->partItem()
+        && currentWindow()->partItem()->identifier() != 0) // for unstored items id can be < 0
     {
         const QString tabToActivate = d->tabsToActivateOnShow.value(
                                           currentWindow()->partItem()->identifier());
@@ -4104,21 +4104,26 @@ void KexiMainWindow::restoreDesignTabIfNeeded(const QString &partClass, Kexi::Vi
     }
 }
 
+void KexiMainWindow::activateDesignTab(const QString &partClass)
+{
+    switch (d->prj->idForClass(partClass)) {
+    case KexiPart::FormObjectType:
+        d->tabbedToolBar->setCurrentTab("form");
+        break;
+    case KexiPart::ReportObjectType:
+        d->tabbedToolBar->setCurrentTab("report");
+        break;
+    default:;
+    }
+}
+
 void KexiMainWindow::activateDesignTabIfNeeded(const QString &partClass, Kexi::ViewMode viewMode)
 {
     const QString tabToActivate = d->tabsToActivateOnShow.value(currentWindow()->partItem()->identifier());
     //kDebug() << partClass << viewMode << tabToActivate;
 
     if (viewMode == Kexi::DesignViewMode && tabToActivate.isEmpty()) {
-        switch (d->prj->idForClass(partClass)) {
-        case KexiPart::FormObjectType:
-            d->tabbedToolBar->setCurrentTab("form");
-            break;
-        case KexiPart::ReportObjectType:
-            d->tabbedToolBar->setCurrentTab("report");
-            break;
-        default:;
-        }
+        activateDesignTab(partClass);
     }
     else {
         d->tabbedToolBar->setCurrentTab(tabToActivate);
